Log the qemu version used to stdout.

Fix reference to uninitialized variable when reporting a
timeout waiting for VM halt confirmation.

Increase default child timeout from 300 to 600 seconds
to support VMMs where power-up takes a long time.

Increase child.delayafterclose and child.delayafterterminate
to support VMMs where power-down takes a long time.

Run more network diagnostics after failed network installs.

Add timestamps to structured log output.

- 1.40 released -

Work around a bug in the urllib library of Python 2.7.12 that causes
FTP transfers to fail with the error message "[Errno ftp error] 200
Type set to I"; see https://bugs.python.org/issue27973.

When halting the child results in an EOF, don't print the exception
since that may be confused with a failure.

Run vmstat -s at the end of the ATF tests to help diagnose issues
like excessive paging due to insufficient memory.

Increase the default of the --test-timeout option from 3 hours to 8
hours, since the sparc tests are now taking more than 5 hours.

Increase the default disk size to 1526M, as 1G is no longer enough
for amd64.

Pass format=raw in the qemu -drive option to suppress warnings in
recent qemu versions.

- 1.39 released -

Deal with incompatible change in the output format of the "info block"
command in qemu 2.5.0.
 
Fix bug where the exit status of the shell command specified with the
--run option was not propagated to the exit status of anita.

New public method start_boot, to facilitate writing test cases that
interact with the boot prompt.

The structured log file now also contains informational messages,
of the form info('message').

- 1.38 released -

Deal with the sysinst message changes of 2015-04-30.

When halting the VM, don't quit as soon as the text "halted" is seen,
because it may be part the message "halted by root", which is printed
before disks have been synced.  Instead look for "The operating system
has halted", EOF, or a timeout.

- 1.37 released -
